# youBot_Hackathon_AANPR

./: .gitignore  README
ybhack/: .gitignore  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
ybhack/include/vision/: CVWindow.h  ImageGrabber.h  Object2D.h  ObjectDetector.h  TOHBlueCubeDetector.h  TOHCube.h  TOHGreenCubeDetector.h  TOHObjectDetector.h  TOHRedCubeDetector.h  VisionController.h
ybhack/include/ybhack/: BlueObjectFilter.h  GreenObjectFilter.h  ImageFilter.h  ImageGrabber.h  RedObjectFilter.h  TestFilter.h
ybhack/nodes/: simple_gripper_joints.py
ybhack/src/: main.cpp  vision.cpp  wslaserfinder.cpp
ybhack/src/vision/: CVWindow.cpp  ImageGrabber.cpp  Object2D.cpp  ObjectDetector.cpp  TOHBlueCubeDetector.cpp  TOHCube.cpp  TOHGreenCubeDetector.cpp  TOHObjectDetector.cpp  TOHRedCubeDetector.cpp  VisionController.cpp  vision.cpp
